--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@ body {
       padding-left: 2vmax;
       padding-right: 2vmax;
       margin: 0 auto;
+      text-align: center;
       /* border: 1px solid #ccc; */
 }
     
