--- a/docs/style.css
+++ b/docs/style.css
@@ -8,9 +8,18 @@ This file is a mess! :-)
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 2vmax;
+}
+
+#body{
+    height: 100%;
+    overflow: auto;
 }
 
 .center {
@@ -26,7 +35,7 @@ body {
     max-width: 80%;
 }
 
-body > header {
+#body > header {
     background: #eee;
     height: 5vmax;
     padding: 1vmax;
@@ -48,13 +57,13 @@ body > header {
     border: 1px solid gray;
 }
 
-body > nav {
+#body > nav {
     background: #333;
     color: #aaa;   
     padding: 1vmax; 
 }
 
-body > footer {
+#body > footer {
     background: #333;
     color: white;    
     min-height: 4vmax;
@@ -392,6 +401,7 @@ span.button:hover {
 
 .emailRight details {
     margin-bottom: 1vmax;
+    border-radius: .2vmax;
     /* border: 1px solid red; */
 }
 
@@ -405,11 +415,99 @@ span.button:hover {
 }
 
 .emailMessage {
-    padding: 1vmax 1vmax 1vmax 2vmax;
-    border:1px solid #ccc;
+    padding: 1vmax 1vmax 1vmax 2vmax;    
     cursor:pointer;
+    background: white;
 }
 
 .emailRight details:last-child summary {
     font-weight: bold;
+}
+
+/****************************************************************************/
+
+details {
+    /* border-top: 1px solid #efefef; */
+    background: #efefef;
+    border-radius: 2vmax;
+    text-align: left;
+    padding: 1vmax;
+    margin-bottom: 0.3vmax;
+}
+
+details > div {
+    display:grid;
+    grid-gap: 1vmax;
+    padding: 1vmax;
+
+}
+
+details input {
+    font-size: 2vmax;
+}
+
+details ul {
+    /* list-style: none; */
+}
+
+div.invite {
+    padding: 1vmax;
+    border: 1px solid gray;
+    margin-bottom:.3vmax;
+    border-radius: 1vmax;
+    background: skyblue;
+    display:grid;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+div.invite.true {
+    background: lime;
+}
+
+div.invite button {
+    font-size: 1.8vmax;
+}
+
+div.invitationform {
+    padding: 2vmax;
+}
+div.invitationform input {
+    font-size: 1.8vmax;
+}
+div.invitationform button {
+    font-size: 1.8vmax;
+}
+
+/***************************************************************************/
+
+.hide-overlay #overlay {
+    left: 100%;
+}
+
+#overlay{
+    position: fixed;
+    top: 10vmax;
+    left: 0;
+    width: 100%;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: left .2s cubic-bezier(.25, .8, .25, 1);    
+    color: white;
+}
+
+#overlay header {
+    border: 1px solid red;
+    height: 10vmax;
+}
+
+#overlay section {
+    height: calc(100% - 10vmax);
+    overflow: auto;
+    border: 1px solid yellow;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#scorxplayer iframe {
+    width: 100%;
+    height: 100%;
 }
