--- a/docs/style.css
+++ b/docs/style.css
@@ -494,6 +494,7 @@ div.invitationform button {
     background-color: rgba(0, 0, 0, 0.8);
     transition: left .2s cubic-bezier(.25, .8, .25, 1);    
     color: white;
+    -webkit-overflow-scrolling: touch;
 }
 
 #overlay header {
