--- a/docs/style.css
+++ b/docs/style.css
@@ -21,7 +21,7 @@ body {
 #body{
     height: 100%;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    /* -webkit-overflow-scrolling: touch; */
 }
 
 .center {
@@ -494,7 +494,7 @@ div.invitationform button {
     background-color: rgba(0, 0, 0, 0.8);
     transition: left .2s cubic-bezier(.25, .8, .25, 1);    
     color: white;
-    -webkit-overflow-scrolling: touch;
+    /* -webkit-overflow-scrolling: touch; */
 }
 
 #overlay header {
