--- a/docs/style.css
+++ b/docs/style.css
@@ -493,8 +493,11 @@ div.invitationform button {
     bottom: 0px;
     background-color: rgba(0, 0, 0, 0.8);
     transition: left .2s cubic-bezier(.25, .8, .25, 1);    
-    color: white;
-    /* -webkit-overflow-scrolling: touch; */
+    color: white;    
+}
+
+.webkit-scrolling {
+    -webkit-overflow-scrolling: touch;
 }
 
 #overlay header {
