--- a/docs/style.css
+++ b/docs/style.css
@@ -504,16 +504,23 @@ div.invitationform button {
     border: 1px solid red;
     height: 10vmax;
 }
-
+ 
 #overlay section {
     height: calc(100% - 10vmax);
     overflow: auto;
     border: 1px solid yellow;
     display:grid;
     grid-template-columns: 1fr 1fr;
+    padding: 1vmax;
 }
 
 #scorxplayer iframe {
     width: 100%;
     height: 100%;
+    border: 0;
+}
+
+#scorxlist {
+    overflow-y:auto;
+    -webkit-overflow-scrolling: touch;
 }
