--- a/docs/style.css
+++ b/docs/style.css
@@ -517,9 +517,9 @@ div.invitationform button {
     left: 100%;
 }
 
-#overlay{
+#overlay {
     position: fixed;
-    top: 10vmax;
+    top: 0vmax;
     left: 0;
     width: 100%;
     bottom: 0px;
@@ -527,6 +527,7 @@ div.invitationform button {
     background-color: white;
     transition: left .2s cubic-bezier(.25, .8, .25, 1);    
     /* color: white;     */
+    z-index: 1000;
 }
 
 .webkit-scrolling {
@@ -535,22 +536,20 @@ div.invitationform button {
 
 #overlay header {
     /* border: 1px solid red; */
-    height: 10vmax;
+    height: 5vmax;
+    padding: 1vmax;
+    background: #eee;
+    display: flex;
+    justify-content: space-between;
 }
  
-#overlay section {
-    height: calc(100% - 10vmax);
-    overflow: auto;
-    /* border: 1px solid yellow; */
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 1vmax;
-}
 
-#scorxplayer iframe {
-    width: 100%;
-    height: 100%;
+#overlay iframe {
+    height: calc(100% - 5vmax);
+    width: 100%;    
     border: 0;
+    padding: 1vmax;
+    background: #333;
 }
 
 /************************************************/
@@ -732,8 +731,6 @@ h3.scorxlisttitle {
 
 
 button.round {
-    /* font-size: 130%; */
-    width: 6vmax;
-    height: 6vmax;
-    border-radius:50%;
+    font-size: 130%;
+
 }
