--- a/docs/style.css
+++ b/docs/style.css
@@ -467,7 +467,7 @@ span.button:hover {
 details {
     /* border-top: 1px solid #efefef; */
     background: #efefef;
-    border-radius: 2vmax;
+    border-radius: 1vmax;
     text-align: left;
     padding: 1vmax;
     margin-bottom: 0.3vmax;
@@ -476,7 +476,7 @@ details {
 details > div {
     display:grid;
     grid-gap: 1vmax;
-    padding: 1vmax;
+    padding: .5vmax;
 
 }
 
@@ -527,10 +527,8 @@ div.invitationform button {
     left: 0;
     width: 100%;
     bottom: 0px;
-    /* background-color: rgba(0, 0, 0, 0.8); */
     background-color: white;
     transition: left .2s cubic-bezier(.25, .8, .25, 1);    
-    /* color: white;     */
     z-index: 1000;
 }
 
@@ -573,13 +571,32 @@ h3.scorxlisttitle {
     /* font-size: 3vmax; */
 }
 
+/* .scorxlist::before {
+    content:'';
+    position: absolute;
+    top: -8px;
+    width: 100%;
+    height: 10px;    
+    box-shadow:         0 0 10px #000000; 
+    background: red;
+} */
+
 .scorxlist {
     margin-top: .6vmax;
-    border: .2vmax solid #ccc;
-    border-radius: 1vmax;
+    position: relative;
+    /* border: .2vmax solid #ccc; */
+    /* border-radius: 1vmax; */
+    /* border-top: .2vmax solid #ccc;
+    border-bottom: .2vmax solid #ccc; */
+
+    /* box-shadow:         inset 0 0 10px #000000; */
+    /* pointer-events: none; */
+
     max-height: 30vmax;
     overflow-y: scroll;
+    overflow-x: none;
     padding: 1vmax;
+    background: white;
     /* border-radius: .4vmax; */
 }
 
@@ -757,3 +774,19 @@ button.bigger {
 .graytext {
     color: #ccc;
 }
+
+details.songlist {
+    background: inherit;
+    padding: .5vmax;
+    border: 2px solid #ccc;
+}
+
+span.songlisttitle {
+    font-size: 2.8vmax;
+}
+
+.songlistcontent {
+
+}
+
+
