--- a/docs/css/fonts.css
+++ b/docs/css/fonts.css
@@ -31,3 +31,11 @@ h3 {
   line-height: calc(1.4vmin + 12px);
   padding-bottom: 1rem;
 } 
+
+input, button {
+  font-size: calc(1vmin + 8px);
+}
+
+button {
+  cursor:pointer;
+}
